# VAC

./: .claudeprompt  .dockerignore  .gitattributes  .gitignore  .prompt  AGENTS.md  CONTRIBUTING.md  Dockerfile  GETTING-STARTED.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  aqua.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh
vac-rs/: .gitignore  Cargo.toml  README.md  cliff.toml  deny.toml  rustfmt.toml
vac-rs/.cargo/: audit.toml  config.toml
vac-rs/.config/: nextest.toml
vac-rs/core/: Cargo.toml  README.md  config.schema.json  gpt_5_vac_prompt.md
vac-rs/core/src/: lib.rs
vac-rs/core/tests/: all.rs  responses_headers.rs
vac-rs/core/tests/common/: Cargo.toml  apps_test_server.rs  context_snapshot.rs  lib.rs  responses.rs  test_vac.rs  test_vac_exec.rs  zsh_branch.rs
vac-rs/core/tests/suite/: abort_tasks.rs  agent_jobs.rs  agent_websocket.rs  agents_md.rs  apply_patch_cli.rs  approvals.rs  approvals.rs.inc  branch_thread.rs  cli_stream.rs  client.rs  client.rs.inc  client_websockets.rs  code_mode.rs  code_mode.rs.inc  collaboration_instructions.rs  compact.rs  compact.rs.inc  compact_remote.rs  compact_remote.rs.inc  compact_resume_branch.rs  deprecation_notice.rs  exec.rs  exec_policy.rs  hierarchical_agents.rs  hooks.rs  hooks.rs.inc  hooks_mcp.rs  image_rollout.rs  items.rs  json_result.rs  live_cli.rs  live_reload.rs  mod.rs  model_overrides.rs  model_switching.rs  model_visible_layout.rs  models_cache_ttl.rs  models_etag_responses.rs  otel.rs  override_updates.rs  (+52 more)
vac-rs/crates/: LAYERING.md  layer-map.yaml
vac-rs/crates/capabilities/: README.md
vac-rs/crates/capabilities/chat/: Cargo.toml
vac-rs/crates/capabilities/code-mode/: Cargo.toml
vac-rs/crates/capabilities/collaboration-mode-templates/: Cargo.toml
vac-rs/crates/capabilities/core-plugins/: Cargo.toml
vac-rs/crates/capabilities/core-skills/: Cargo.toml
vac-rs/crates/capabilities/docs/: Cargo.toml
vac-rs/crates/capabilities/external-agent-migration/: Cargo.toml
vac-rs/crates/capabilities/external-agent-sessions/: Cargo.toml
vac-rs/crates/capabilities/file-search/: Cargo.toml  README.md
vac-rs/crates/capabilities/identity/: Cargo.toml
vac-rs/crates/capabilities/local-runtime-owner/: Cargo.toml
vac-rs/crates/capabilities/ownership/: Cargo.toml
vac-rs/crates/capabilities/prompts/: Cargo.toml
vac-rs/crates/capabilities/release/: Cargo.toml
vac-rs/crates/capabilities/response-debug-context/: Cargo.toml
vac-rs/crates/capabilities/sessions/: Cargo.toml
vac-rs/crates/capabilities/tools/: Cargo.toml  README.md
vac-rs/crates/capabilities/tools-domain/: Cargo.toml
vac-rs/crates/capabilities/vac-ak/: Cargo.toml
vac-rs/crates/control-plane/: README.md
vac-rs/crates/control-plane/control-plane/: Cargo.toml  build.rs
vac-rs/crates/control-plane/vac-assessment/: Cargo.toml
vac-rs/crates/control-plane/vac-control-plane/: Cargo.toml
vac-rs/crates/control-plane/vac-doctor/: Cargo.toml
vac-rs/crates/control-plane/vac-evidence/: Cargo.toml
vac-rs/crates/control-plane/vac-index/: Cargo.toml
vac-rs/crates/control-plane/vac-memory/: Cargo.toml
vac-rs/crates/control-plane/vac-policy/: Cargo.toml
vac-rs/crates/control-plane/vac-readiness/: Cargo.toml
vac-rs/crates/control-plane/vac-registry-compiler/: Cargo.toml
vac-rs/crates/control-plane/vac-spec-sync/: Cargo.toml
vac-rs/crates/foundation/: README.md
vac-rs/crates/foundation/ansi-escape/: Cargo.toml  README.md
vac-rs/crates/foundation/arg0/: Cargo.toml
vac-rs/crates/foundation/async-utils/: Cargo.toml
vac-rs/crates/foundation/config/: Cargo.toml
vac-rs/crates/foundation/features/: Cargo.toml
vac-rs/crates/foundation/file-system/: Cargo.toml
vac-rs/crates/foundation/git-utils/: Cargo.toml  README.md
vac-rs/crates/foundation/install-context/: Cargo.toml
vac-rs/crates/foundation/protocol/: Cargo.toml  README.md
vac-rs/crates/foundation/rollout/: Cargo.toml
vac-rs/crates/foundation/rollout-trace/: Cargo.toml  README.md
vac-rs/crates/foundation/runtime-protocol/: Cargo.toml
vac-rs/crates/foundation/state/: Cargo.toml
vac-rs/crates/foundation/terminal-detection/: Cargo.toml
vac-rs/crates/foundation/test-binary-support/: Cargo.toml  lib.rs
vac-rs/crates/foundation/thread-store/: Cargo.toml
vac-rs/crates/foundation/uds/: Cargo.toml
vac-rs/crates/foundation/vac-brand/: Cargo.toml
vac-rs/crates/foundation/vac-config/: Cargo.toml
vac-rs/crates/foundation/vac-experimental-api-macros/: Cargo.toml
vac-rs/crates/foundation/vac-foundation/: Cargo.toml
vac-rs/crates/foundation/vac-jcs/: Cargo.toml
vac-rs/crates/foundation/vac-paths/: Cargo.toml
vac-rs/crates/foundation/vac-state/: Cargo.toml
vac-rs/crates/foundation/vac-types/: Cargo.toml
vac-rs/crates/integrations/: README.md
vac-rs/crates/integrations/connectors/: Cargo.toml
vac-rs/crates/integrations/network-proxy/: Cargo.toml  README.md
vac-rs/crates/integrations/otel/: Cargo.toml  README.md
vac-rs/crates/integrations/plugin/: Cargo.toml
vac-rs/crates/integrations/rmcp-client/: Cargo.toml
vac-rs/crates/integrations/skills/: Cargo.toml
vac-rs/crates/integrations/vac-mcp/: Cargo.toml
vac-rs/crates/integrations/vac-mcp-client/: Cargo.toml
vac-rs/crates/integrations/vac-mcp-config/: Cargo.toml
vac-rs/crates/integrations/vac-mcp-proxy/: Cargo.toml
vac-rs/crates/integrations/vac-mcp-server/: Cargo.toml  README_SECRETS.md
vac-rs/crates/integrations/vac-messaging-gateway/: Cargo.toml  README.md
vac-rs/crates/integrations/vac-remote-service/: Cargo.toml  README.md
vac-rs/crates/integrations/vac-telemetry/: Cargo.toml  README.md
vac-rs/crates/providers/: README.md
vac-rs/crates/providers/agent-identity/: Cargo.toml
vac-rs/crates/providers/analytics/: Cargo.toml
vac-rs/crates/providers/aws-auth/: Cargo.toml
vac-rs/crates/providers/device-key/: Cargo.toml
vac-rs/crates/providers/feedback/: Cargo.toml
vac-rs/crates/providers/keyring-store/: Cargo.toml
vac-rs/crates/providers/lmstudio/: Cargo.toml
vac-rs/crates/runtime/: README.md
vac-rs/crates/surfaces/: README.md
(+3613 files in other folders)
