[workspace]
resolver = "2"
members = [
  "core",
  "crates/capabilities/vac-ak",
  "crates/control-plane/vac-assessment",
  "crates/control-plane/vac-control-plane",
  "crates/control-plane/vac-doctor",
  "crates/control-plane/vac-evidence",
  "crates/control-plane/vac-index",
  "crates/control-plane/vac-memory",
  "crates/control-plane/vac-policy",
  "crates/control-plane/vac-readiness",
  "crates/control-plane/vac-registry-compiler",
  "crates/control-plane/vac-spec-sync",
  "crates/foundation/vac-brand",
  "crates/foundation/vac-config",
  "crates/foundation/vac-foundation",
  "crates/foundation/vac-jcs",
  "crates/foundation/vac-paths",
  "crates/foundation/vac-state",
  "crates/foundation/vac-types",
  "crates/integrations/vac-mcp-client",
  "crates/integrations/vac-mcp-config",
  "crates/integrations/vac-mcp-proxy",
  "crates/integrations/vac-mcp-server",
  "crates/integrations/vac-messaging-gateway",
  "crates/integrations/vac-remote-service",
  "crates/integrations/vac-telemetry",
  "crates/providers/vac-provider-core",
  "crates/runtime/vac-agent-loop",
  "crates/runtime/vac-autopilot",
  "crates/runtime/vac-broker",
  "crates/runtime/vac-exec",
  "crates/runtime/vac-runtime-jobs",
  "crates/runtime/vac-shell-approval",
  "crates/runtime/vac-watch",
  "crates/surfaces/vac-cli",
  "crates/surfaces/vac-mcp-surface",
  "crates/surfaces/vac-slash",
  "crates/surfaces/vac-tui",
]
default-members = ["crates/surfaces/vac-cli"]

[workspace.package]
version = "0.3.86-vac.1"
edition = "2024"
description = "VAC: Vastar Agentic CLI for manifest-driven, assessment-grounded agentic workspaces."
license = "Apache-2.0"
repository = "https://github.com/mibrohimsulaeman-a11y/VAC"
homepage = "https://github.com/mibrohimsulaeman-a11y/VAC"

[workspace.dependencies]
vac-core = { path = "core", version = "0.3.86-vac.1" }
vac-ak = { path = "crates/capabilities/vac-ak", version = "0.3.86-vac.1" }
vac-assessment = { path = "crates/control-plane/vac-assessment", version = "0.3.86-vac.1" }
vac-control-plane = { path = "crates/control-plane/vac-control-plane", version = "0.3.86-vac.1" }
vac-doctor = { path = "crates/control-plane/vac-doctor", version = "0.3.86-vac.1" }
vac-evidence = { path = "crates/control-plane/vac-evidence", version = "0.3.86-vac.1" }
vac-index = { path = "crates/control-plane/vac-index", version = "0.3.86-vac.1" }
vac-memory = { path = "crates/control-plane/vac-memory", version = "0.3.86-vac.1" }
vac-policy = { path = "crates/control-plane/vac-policy", version = "0.3.86-vac.1" }
vac-readiness = { path = "crates/control-plane/vac-readiness", version = "0.3.86-vac.1" }
vac-registry-compiler = { path = "crates/control-plane/vac-registry-compiler", version = "0.3.86-vac.1" }
vac-spec-sync = { path = "crates/control-plane/vac-spec-sync", version = "0.3.86-vac.1" }
vac-brand = { path = "crates/foundation/vac-brand", version = "0.3.86-vac.1" }
vac-config = { path = "crates/foundation/vac-config", version = "0.3.86-vac.1" }
vac-foundation = { path = "crates/foundation/vac-foundation", version = "0.3.86-vac.1" }
vac-jcs = { path = "crates/foundation/vac-jcs", version = "0.3.86-vac.1" }
vac-paths = { path = "crates/foundation/vac-paths", version = "0.3.86-vac.1" }
vac-state = { path = "crates/foundation/vac-state", version = "0.3.86-vac.1" }
vac-types = { path = "crates/foundation/vac-types", version = "0.3.86-vac.1" }
vac-mcp-client = { path = "crates/integrations/vac-mcp-client", version = "0.3.86-vac.1" }
vac-mcp-config = { path = "crates/integrations/vac-mcp-config", version = "0.3.86-vac.1" }
vac-mcp-proxy = { path = "crates/integrations/vac-mcp-proxy", version = "0.3.86-vac.1" }
vac-mcp-server = { path = "crates/integrations/vac-mcp-server", version = "0.3.86-vac.1" }
vac-messaging-gateway = { path = "crates/integrations/vac-messaging-gateway", version = "0.3.86-vac.1" }
vac-remote-service = { path = "crates/integrations/vac-remote-service", version = "0.3.86-vac.1" }
vac-telemetry = { path = "crates/integrations/vac-telemetry", version = "0.3.86-vac.1" }
vac-provider-core = { path = "crates/providers/vac-provider-core", version = "0.3.86-vac.1" }
vac-agent-loop = { path = "crates/runtime/vac-agent-loop", version = "0.3.86-vac.1" }
vac-autopilot = { path = "crates/runtime/vac-autopilot", version = "0.3.86-vac.1" }
vac-broker = { path = "crates/runtime/vac-broker", version = "0.3.86-vac.1" }
vac-exec = { path = "crates/runtime/vac-exec", version = "0.3.86-vac.1" }
vac-runtime-jobs = { path = "crates/runtime/vac-runtime-jobs", version = "0.3.86-vac.1" }
vac-shell-approval = { path = "crates/runtime/vac-shell-approval", version = "0.3.86-vac.1" }
vac-watch = { path = "crates/runtime/vac-watch", version = "0.3.86-vac.1" }
vac-cli = { path = "crates/surfaces/vac-cli", version = "0.3.86-vac.1" }
vac-mcp-surface = { path = "crates/surfaces/vac-mcp-surface", version = "0.3.86-vac.1" }
vac-slash = { path = "crates/surfaces/vac-slash", version = "0.3.86-vac.1" }
vac-tui = { path = "crates/surfaces/vac-tui", version = "0.3.86-vac.1" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
rmcp = { version = "0.11.0", features = ["base64", "macros", "client", "server", "reqwest", "transport-io", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-worker"], default-features = false }
futures = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.1"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "=0.12.15", features = ["json", "stream", "rustls-tls"], default-features = false }
ratatui = { version = "0.29.0", features = ["scrolling-regions", "unstable-rendered-line-info", "unstable-widget-ref"] }
toml = "0.8.0"
rand = "0.9.1"
walkdir = "2.0.0"
notify = "8.0.0"
thiserror = "2.0.12"
rustls = "0.23.29"
rcgen = "0.12.1"
rustls-pemfile = "2.1.2"
tokio-rustls = "0.26.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum = "0.8"
time = { version = "0.3", features = ["macros"] }
rustls-platform-verifier = "0.5"
crossterm = "0.29"
tempfile = "3.0"
similar = { version = "2.7.0", features = ["inline"] }
schemars = { version = "1.1.0", features = ["chrono"] }
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
globset = "0.4"
async-trait = "0.1"
open = "5.3.2"
log = "0.4"
libsql = "0.9.29"
terminal-light = "1.8"
sha2 = "0.10"

[workspace.lints.clippy]
# v1.9 State-9: these remain explicit baseline debt while source still has
# historical donor/runtime surfaces with many unwrap/expect/string-slice sites.
# CI uses `cargo clippy -- -D warnings`; setting these to `allow` keeps the
# build gate honest until the debt ledger is paid down instead of pretending the
# current workspace can satisfy deny-level lint policy.
unwrap_used = "allow"
expect_used = "allow"
string_slice = "allow"

