[package]
name = "vac-core"
version.workspace = true
edition.workspace = true
description = "VAC root facade crate for control-plane-first workspace integration."
license.workspace = true

[lints]
workspace = true

[dependencies]
vac-brand.workspace = true
vac-control-plane.workspace = true
vac-runtime-jobs.workspace = true
vac-readiness.workspace = true
vac-types.workspace = true
serde.workspace = true
serde_json.workspace = true
