[package]
name = "core_test_support"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
base64 = { workspace = true }
vac-arg0 = { workspace = true }
vac-config = { workspace = true }
vac-core = { workspace = true }
vac-exec-server = { workspace = true }
vac-features = { workspace = true }
vac-login = { workspace = true }
vac-model-provider-info = { workspace = true }
vac-models-manager = { workspace = true }
vac-protocol = { workspace = true }
vac-utils-absolute-path = { workspace = true }
vac-utils-cargo-bin = { workspace = true }
ctor = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
regex-lite = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["net", "time"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
shlex = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
