[package]
edition.workspace = true
license.workspace = true
name = "vac-core-skills"
version.workspace = true

[lib]
doctest = false
name = "vac_core_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
vac-analytics = { workspace = true }
vac-config = { workspace = true }
vac-exec-server = { workspace = true }
vac-login = { workspace = true }
vac-model-provider = { workspace = true }
vac-otel = { workspace = true }
vac-protocol = { workspace = true }
vac-skills = { workspace = true }
vac-utils-absolute-path = { workspace = true }
vac-utils-output-truncation = { workspace = true }
vac-utils-plugins = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
toml = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
