[package]
name = "vac-external-agent-sessions"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false
name = "vac_external_agent_sessions"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
vac-protocol = { workspace = true }
vac-utils-output-truncation = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
vac-runtime-protocol = { workspace = true }
tempfile = { workspace = true }
