[package]
edition.workspace = true
license.workspace = true
name = "vac-local-runtime-owner"
version.workspace = true

[lib]
name = "vac_local_runtime_owner"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
vac-analytics = { workspace = true }
vac-core = { workspace = true }
vac-core-skills = { workspace = true }
vac-exec-server = { workspace = true }
vac-features = { workspace = true }
vac-login = { workspace = true }
vac-memories-write = { workspace = true }
vac-models-manager = { workspace = true }
vac-protocol = { workspace = true }
vac-state = { workspace = true }
vac-thread-store = { workspace = true }
vac-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true }
vac-config = { workspace = true }
vac-core-plugins = { workspace = true }
vac-external-agent-migration = { workspace = true }
vac-external-agent-sessions = { workspace = true }
vac-plugin = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
