[package]
edition.workspace = true
license.workspace = true
name = "vac-response-debug-context"
version.workspace = true

[lib]
doctest = false
name = "vac_response_debug_context"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
vac-api = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
default = []
debug-cloud = []
