[package]
name = "vac-index"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }


[lints]
workspace = true
