[package]
name = "vac-policy"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
vac-paths = { workspace = true }


[lints]
workspace = true
